# practice-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MCQ_Platform_Master_Prompt.md  README-IMPLEMENTATION.md  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  info.md  pytest.ini  quiz_easy.json  quiz_expert.json  quiz_hard.json  quiz_normal.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  integration.yml
backend/: .bandit  .dockerignore  .env.example  .pylintrc  Dockerfile  Makefile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: admin.py  questions.py  quiz.py  router.py  user.py
backend/app/core/: config.py  exceptions.py  logging.py  metrics.py  security.py  session.py  tracing.py
backend/app/middleware/: api_version.py  rate_limiter.py  request_id.py
backend/app/models/: schemas.py
backend/app/repositories/: quiz_repository.py
backend/app/services/: quiz_service.py
backend/scripts/: security_check.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_routes.py
backend/tests/unit/: test_models.py  test_quiz_service.py
database/: README.md  import_questions.py  schema.sql  seed.sql
database/seed/: README.md  quiz_bank.json
docs/: api.md  architecture.md  deployment.md  development.md
frontend/: .dockerignore  .env.example  Dockerfile  jest.config.ts  jest.setup.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/progress/: page.tsx
frontend/src/app/quiz/: page.tsx
frontend/src/components/: error-boundary.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/__tests__/: ThemeToggle.test.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/quiz/: CategorySelector.tsx  DifficultySelector.tsx  QuestionCard.tsx  QuizProgress.tsx  QuizSummary.tsx
frontend/src/components/ui/: badge.tsx  button.tsx
frontend/src/lib/: api.ts  supabase-data.ts  supabase.ts  utils.ts
frontend/src/lib/__tests__/: api.test.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
monitoring/: prometheus.yml
